# toJPG

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  templates_config.py
static/: script.js  style.css
static/favicon/: site.webmanifest
templates/: index.html
