[project]
name = "tojpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow-avif-plugin>=1.5.5",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
]
